chore(gradle): enable playing games on JDK>=16
Need to hardcode some Add-Opens for XStream & co.
Alternatively we could compile on a newer JDK,
but that would require updating Dokka and force users to update.

Fixes player issues:
- correct mainClassName
- adjust testGame dependencies to updated deployShadow task

Fixes #406 #405