@@ -18,7 +18,7 @@ sourceSets.main {
 }
 
 application {
-    mainClassName = "sc.player2021.Starter"
+    mainClassName = "sc.player2022.Starter"
 }
 
 dependencies {
@@ -30,6 +30,18 @@ tasks {
     shadowJar {
         group = "distribution"
         archiveFileName.set("defaultplayer.jar")
+        manifest {
+            attributes(
+                    "Add-Opens" to arrayOf(
+                            "javafx.controls/javafx.scene.control.skin",
+                            "javafx.controls/javafx.scene.control",
+                            "javafx.graphics/javafx.scene",
+                            // For accessing InputMap used in RangeSliderBehavior
+                            "javafx.controls/com.sun.javafx.scene.control.inputmap",
+                            // Expose list internals for xstream conversion: https://github.com/x-stream/xstream/issues/253
+                            "java.base/java.util").joinToString(" ")
+            )
+        }
     }
     
     val copyDocs by creating(Copy::class) {
